- Pequeñas correcciones para dar soporte a PHP 8.4. - Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1581,6 +1581,8 @@
     "travel": "Travel",
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Type",
     "type-alert": "Type alert",
     "type-critical": "Type critical",
