--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1581,6 +1581,8 @@
     "travel": "Bidaia",
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Mota",
     "type-alert": "Alerta mota",
     "type-critical": "Mota kritikoa",
