--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1581,6 +1581,8 @@
     "travel": "Viaje",
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Typ",
     "type-alert": "Typ alarmu",
     "type-critical": "Typ krytyczny",
