--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1581,6 +1581,8 @@
     "travel": "Viatge",
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Tipus",
     "type-alert": "Tipus alerta",
     "type-critical": "Tipus crític",
