--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1581,6 +1581,8 @@
     "travel": "Reise",
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Typ",
     "type-alert": "Typwarnung",
     "type-critical": "Kritischer Typ",
