--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -1581,6 +1581,8 @@
     "travel": "Viaje",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
