--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1581,6 +1581,8 @@
     "travel": "Voyage",
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Type",
     "type-alert": "Type alerte",
     "type-critical": "Type critique",
