--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1581,6 +1581,8 @@
     "travel": "Viagem",
     "try-again-later": "T",
     "tuesday": "terça-feira",
+    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-enabled": "Activar autenticación en 2 pasos",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
     "type-critical": "Tipo crítico",
