Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1581,6 +1581,8 @@
     "travel": "Viaggio",
     "try-again-later": "Riprova più tardi",
     "tuesday": "Martedì",
+    "two-factor-auth": "Autenticazione a due fattori",
+    "two-factor-enabled": "Attivare l'autenticazione a due fattori",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
     "type-critical": "Tipo critico",
