Pequeñas correcciones a los últimos PR y actualizadas las traducciones.

--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1581,8 +1581,8 @@
     "travel": "Viage",
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipo alerta",
     "type-critical": "Tipo crític",
