--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1582,7 +1582,7 @@
     "try-again-later": "T",
     "tuesday": "terça-feira",
     "two-factor-auth": "Autenticação em 2 passos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-enabled": "Ativar autenticação em 2 passos",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
     "type-critical": "Tipo crítico",
