- Añadido aviso para actualizar a PHP 8.1 - Actualizadas las traducciones

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1581,7 +1581,7 @@
     "travel": "Bidaia",
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
-    "two-factor-auth": "Bi pausoetako autentifikazioa",
+    "two-factor-auth": "Bi faktoreko autentifikazioa",
     "two-factor-enabled": "Bi pausoetako autentifikazioa aktibatu",
     "type": "Mota",
     "type-alert": "Alerta mota",
