--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1582,7 +1582,7 @@
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-enabled": "Aktivierung der Zwei-Faktor-Authentifizierung",
     "type": "Typ",
     "type-alert": "Typwarnung",
     "type-critical": "Kritischer Typ",
