--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1582,7 +1582,7 @@
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
     "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
     "type": "Typ",
     "type-alert": "Typ alarmu",
     "type-critical": "Typ krytyczny",
