Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1581,8 +1581,8 @@
     "travel": "Viatge",
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "Autenticació en 2 passos",
+    "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipus alerta",
     "type-critical": "Tipus crític",
