--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1581,7 +1581,7 @@
     "travel": "Reise",
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
-    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-auth": "Zwei-Faktor-Authentifizierung",
     "two-factor-enabled": "Aktivierung der Zwei-Faktor-Authentifizierung",
     "type": "Typ",
     "type-alert": "Typwarnung",
