--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1581,7 +1581,7 @@
     "travel": "Viaje",
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
-    "two-factor-auth": "Autenticación en 2 pasos",
+    "two-factor-auth": "Autoryzacja dwuskładnikowa",
     "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
     "type": "Typ",
     "type-alert": "Typ alarmu",
