Actualizada las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1581,8 +1581,8 @@
     "travel": "Cestování",
     "try-again-later": "Pruebe de nuevo más tarde",
     "tuesday": "Martes",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "2fázové ověření",
+    "two-factor-enabled": "Aktivovat dvoufázovou autentizaci",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
