--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1582,7 +1582,7 @@
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
     "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-enabled": "Activar a autenticación en 2 pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
