Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1582,7 +1582,7 @@
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "two-factor-auth": "Zwei-Faktor-Authentifizierung",
-    "two-factor-enabled": "Aktivierung der Zwei-Faktor-Authentifizierung",
+    "two-factor-enabled": "Zwei-Faktor-Authentifizierung aktivieren",
     "type": "Typ",
     "type-alert": "Typwarnung",
     "type-critical": "Kritischer Typ",
