Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1026,6 +1026,7 @@
     "no": "No",
     "no-data": "No hi ha dades",
     "no-data-received-form": "Cap dada rebuda per formulari",
+    "no-document-selected": "No s'ha seleccionat cap document",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Cap forat trobat",
     "no-invoice": "Sense factura",
