--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1026,6 +1026,7 @@
     "no": "No",
     "no-data": "No data",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-document-selected": "No document has been selected",
     "no-extra-lines": "No extra lines",
     "no-gaps-found": "No gaps found",
     "no-invoice": "No invoice",
