--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1026,6 +1026,7 @@
     "no": "Ez",
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
+    "no-document-selected": "Ez da dokumenturik hautatu",
     "no-extra-lines": "Ez gehitu lerro gehigarriak",
     "no-gaps-found": "Ez da hutsunerik aurkitu",
     "no-invoice": "Fakturarik gabe",
