--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1026,6 +1026,7 @@
     "no": "Non",
     "no-data": "Pas de données",
     "no-data-received-form": "Aucune donnée reçue par formulaire",
+    "no-document-selected": "Aucun document sélectionné",
     "no-extra-lines": "Pas de lignes supplémentaires",
     "no-gaps-found": "Aucune lacune constatée",
     "no-invoice": "Pas de facture",
