--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1026,6 +1026,7 @@
     "no": "Non",
     "no-data": "Non hai datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-document-selected": "Non se seleccionou ningún documento",
     "no-extra-lines": "Non engadir liñas extra",
     "no-gaps-found": "Ningún oco atopado",
     "no-invoice": "Sen factura",
