--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1026,6 +1026,7 @@
     "no": "non",
     "no-data": "Nessun dato",
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
+    "no-document-selected": "Nessun documento selezionato",
     "no-extra-lines": "Nessuna linea extra",
     "no-gaps-found": "Nessun gap trovato",
     "no-invoice": "Nessuna fattura",
