--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1026,6 +1026,7 @@
     "no": "Nie",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
+    "no-document-selected": "Nie wybrano żadnego dokumentu",
     "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
