--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1026,6 +1026,7 @@
     "no": "Não",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
+    "no-document-selected": "Nenhum documento selecionado",
     "no-extra-lines": "Não adicionar linhas extras",
     "no-gaps-found": "N",
     "no-invoice": "sem fatura",
