--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1026,6 +1026,7 @@
     "no": "No",
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
+    "no-document-selected": "No s'ha seleccionat cap document",
     "no-extra-lines": "No afegir línies extra",
     "no-gaps-found": "Cap buit trobat",
     "no-invoice": "Sense factura",
