--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1156,6 +1156,7 @@
     "php-extension-needed": "L'extension %extension% est requise dans la configuration PHP",
     "php-extension-not-found": "Vous n'avez pas installé l'extension %extension% de PHP.",
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
+    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
     "physical-stock": "Stock physique",
     "picking": "Préparation de commandes",
     "plan": "Plan",
