--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1156,6 +1156,7 @@
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-support-end": "p",
+    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
     "physical-stock": "Estoque físico",
     "picking": "Separação",
     "plan": "Plano",
