--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1156,6 +1156,7 @@
     "php-extension-needed": "Es requereix l'extensió %extension% en la configuració de PHP",
     "php-extension-not-found": "No tens instalada l'extensió PHP %extension%.",
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
+    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
     "physical-stock": "Estoc físic",
     "picking": "Recollida",
     "plan": "Pla",
