--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1156,7 +1156,7 @@
     "php-extension-needed": "L'extension %extension% est requise dans la configuration PHP",
     "php-extension-not-found": "Vous n'avez pas installé l'extension %extension% de PHP.",
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
-    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
+    "php-version-too-new": "Il est recommandé d'utiliser une version de PHP entre %min_version% et %max_version%. Vous avez actuellement la %version%",
     "physical-stock": "Stock physique",
     "picking": "Préparation de commandes",
     "plan": "Plan",
@@ -1583,8 +1583,8 @@
     "travel": "Voyage",
     "try-again-later": "Veuillez réessayer plus tard",
     "tuesday": "Mardi",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "Authentification à deux facteurs",
+    "two-factor-enabled": "Activer l’authentification à deux facteurs",
     "type": "Type",
     "type-alert": "Type alerte",
     "type-critical": "Type critique",
