--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1156,7 +1156,7 @@
     "php-extension-needed": "PHP-Erweiterung benötigt: %extension%",
     "php-extension-not-found": "Sie haben die PHP-Erweiterung %extension% nicht installiert.",
     "php-support-end": "PHP-Endsupport",
-    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
+    "php-version-too-new": "Es wird empfohlen, eine PHP-Version zwischen %min_version% und %max_version% zu verwenden. Derzeit haben Sie die Version %version%.",
     "physical-stock": "Physischer Bestand",
     "picking": "Kommissionierung",
     "plan": "Planen",
