--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1156,7 +1156,7 @@
     "php-extension-needed": "The extension %extension% is required in the PHP configuration",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
-    "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
+    "php-version-too-new": "It is recommended to use a PHP version between %min_version% and %max_version%. You currently have %version%.",
     "physical-stock": "Physical stock",
     "picking": "Picking",
     "plan": "Plan",
@@ -1583,8 +1583,8 @@
     "travel": "Travel",
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar autenticación en 2 pasos",
+    "two-factor-auth": "2-step authentication",
+    "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
     "type-alert": "Type alert",
     "type-critical": "Type critical",
