--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -281,7 +281,7 @@
     "companies": "Firmen",
     "company": "Unternehmen",
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
-    "company-iban-changed": "Die IBAN des Bankkontos %account% wurde geändert. Früher war es %old% und jetzt ist es %new%.",
+    "company-iban-changed": "Die IBAN des Bankkontos %account% wurde geändert. Früher war es %old% und nun ist es %new%.",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
     "company-tax": "Körperschaftsteuervorschriften",
