Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "S'ha produït un error en enviar el correu electrònic",
     "send-mail-ok": "Correu enviat",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviant",
     "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Va enviar un document",
     "sent-a-location": "Va enviar una ubicació",
