--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Error al enviar el email",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Odeslat videa",
+    "sent": "Odesláno",
     "sent-a-audio": "Odeslal zvuk",
     "sent-a-document": "Odeslal dokument",
     "sent-a-location": "Poslal polohu",
