--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Fehler beim Senden der E-Mail",
     "send-mail-ok": "E-Mail erfolgreich gesendet",
     "send-videos": "Videos senden",
+    "sent": "Gesendet",
     "sent-a-audio": "h",
     "sent-a-document": "Ein Dokument gesendet",
     "sent-a-location": "Standort gesendet",
