--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Error when sending the email",
     "send-mail-ok": "Email sent correctly",
     "send-videos": "Send videos",
+    "sent": "Sent",
     "sent-a-audio": "Sent a sound",
     "sent-a-document": "Sent a document",
     "sent-a-location": "Sent a location",
