--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviado",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
