--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Errorea posta elektronikoa bidaltzean",
     "send-mail-ok": "Posta ondo bidalia",
     "send-videos": "Bideoak Bidali",
+    "sent": "Bidalia",
     "sent-a-audio": "Audio bat bidali du",
     "sent-a-document": "Dokumentu bat bidali du",
     "sent-a-location": "Kokapen bat bidali du",
