--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Error ao enviar o email",
     "send-mail-ok": "Email enviado correctamente",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviado",
     "sent-a-audio": "Enviou un audio",
     "sent-a-document": "Enviou un documento",
     "sent-a-location": "Enviou unha ubicación",
@@ -1583,8 +1584,8 @@
     "travel": "Viaxe",
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
-    "two-factor-auth": "Autenticación en 2 pasos",
-    "two-factor-enabled": "Activar a autenticación en 2 pasos",
+    "two-factor-auth": "Autenticación en dous pasos",
+    "two-factor-enabled": "Activar a autenticación en dous pasos",
     "type": "Tipo",
     "type-alert": "Tipo alert",
     "type-critical": "Tipo crítico",
