--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "Email inviato correttamente",
     "send-videos": "Invia video",
+    "sent": "Inviato",
     "sent-a-audio": "Ha inviato un audio",
     "sent-a-document": "Ha inviato un documento",
     "sent-a-location": "Ha inviato una posizione",
