--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Błąd podczas wysyłania e-maila",
     "send-mail-ok": "E-mail wysłany pomyślnie",
     "send-videos": "Enviar vídeos",
+    "sent": "Wysłano",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
