--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Erro ao enviar email",
     "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
+    "sent": "Enviado",
     "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Enviou um documento",
     "sent-a-location": "Enviou uma localização",
