--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1371,6 +1371,7 @@
     "send-mail-error": "Hi ha hagut un erro a l'enviar el correu",
     "send-mail-ok": "El correu s'ha enviar correctament",
     "send-videos": "E",
+    "sent": "Enviat",
     "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Envià un document",
     "sent-a-location": "Has enviat una ubicació",
