Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -237,7 +237,7 @@
     "choose-payment-method": "Wybierz metodę płatności",
     "choose-serie": "Wybierz serię",
     "choose-source": "Wybierz źródło",
-    "cifnif": "CIF\/NIF",
+    "cifnif": "CIF\\\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
     "click-link-to-add": "Możesz dodać pliki z biblioteki w menu administratora.",
