--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -281,7 +281,7 @@
     "companies": "Firmy",
     "company": "Firma",
     "company-commission-info": "Będzie stosowane tylko do wybranej firmy",
-    "company-iban-changed": "Zmieniono iban konta bankowego %account%. Wcześniej był %old%, a teraz jest %new%",
+    "company-iban-changed": "Zmieniono IBAN konta bankowego %account%. Wcześniej był %old%, a teraz jest %new%",
     "company-manager": "Administrator firmy",
     "company-name": "Nazwa firmy",
     "company-tax": "Podatek dochodowy od osób prawnych",
