Actualizadas las traducciones

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1147,7 +1147,7 @@
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
     "personalized": "Personalizované",
-    "pgsql-endpoint": "Konečný bod PostgreSQL",
+    "pgsql-endpoint": "Koncový bod PostgreSQL",
     "pgsql-ssl-mode": "Režim SSL PostgreSQL",
     "phase": "Fase",
     "phone": "Teléfono",
