--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1156,7 +1156,7 @@
     "php-extension-needed": "PHP-ren konfigurazioan %extension% luzapena behar da",
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
-    "php-version-too-new": "%min_version% eta %max_version% arteko PHP bertsio bat erabiltzea gomendatzen da. Une honetan, %version% duzu.",
+    "php-version-too-new": "%min_version% eta %max_version% artean PHP bertsio bat erabiltzea gomendatzen da. Une honetan, %version% duzu.",
     "physical-stock": "Stock fisikoa",
     "picking": "Picking",
     "plan": "Plana",
