--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1045,6 +1045,7 @@
     "not-enough-stock": "%reference% artikuluaren stock nahikoa ez dago",
     "not-passed-integrity-check": "Fitxategi batzuk ez dute gainditu integritate egiaztapena ...  <br\/>Hemen <a class='alert-link' target='_blank' href='IntegritySystemCheck'> begiratu xehetasunak<\/a>.",
     "not-public": "Ez da publikoa",
+    "not-sent": "Ez da bidalia",
     "not-stored-content": "Ezin da edukia biltegi egin",
     "not-valid-email": "%email% eposta baliogabea",
     "not-valid-fiscal-number": "%type% %number% baliogabea",
@@ -1670,7 +1671,7 @@
     "warehouses": "Biltegiak",
     "warning": "Erne",
     "warnings": "Oharrak",
-    "weak-password": "Pasahitza gutxienez 8 karaktere izan behar ditu, zenbakiak eta letrez osatua.",
+    "weak-password": "Pasahitza gutxienez 8 karaktere izan behar ditu, zenbaki eta letra batekin.",
     "web": "Web",
     "website": "Webgunea",
     "wednesday": "Asteazkena",
