--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1045,6 +1045,7 @@
     "not-enough-stock": "No hi ha suficient estoc de %reference%",
     "not-passed-integrity-check": "Alguns archius no han passat la verificació d'integritat ... <br\/>Pots <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtindre més detalls ací<\/a>.",
     "not-public": "No públic",
+    "not-sent": "No enviat",
     "not-stored-content": "Contingut no emmagatzemat",
     "not-valid-email": "La direcció de correu %email% no és vàlida",
     "not-valid-fiscal-number": "El %type% %number% no és vàlit",
