--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -1045,6 +1045,7 @@
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Algunos archivos no han pasado la verificación de integridad ... <br\/>Puedes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obtener más detalles aquí<\/a>.",
     "not-public": "No público",
+    "not-sent": "No enviado",
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
