Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -531,6 +531,7 @@
     "enabled": "Actiu",
     "enabled-plugins": "Plugins actius",
     "encrypt": "Xifrar",
+    "end": "Fi",
     "end-date": "Data de finalització",
     "end-month": "Mes de fi",
     "end-time": "Hora de finalització",
