--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -531,6 +531,7 @@
     "enabled": "Activo",
     "enabled-plugins": "Aktivní pluginy",
     "encrypt": "Encriptación",
+    "end": "Fin",
     "end-date": "Fecha de fin",
     "end-month": "Konec měsíce",
     "end-time": "Hora finalización",
