--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -531,6 +531,7 @@
     "enabled": "Enabled",
     "enabled-plugins": "Active plugins",
     "encrypt": "Encrypt",
+    "end": "End",
     "end-date": "End date",
     "end-month": "End month",
     "end-time": "End time",
