--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -531,6 +531,7 @@
     "enabled": "Aktiboa",
     "enabled-plugins": "Plugin aktiboak",
     "encrypt": "Enkriptatzea",
+    "end": "Bukaera",
     "end-date": "Amaiera data",
     "end-month": "Amaitzeko hilabetea",
     "end-time": "Amaierako ordua",
