--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -531,6 +531,7 @@
     "enabled": "Activo",
     "enabled-plugins": "Plugins activos",
     "encrypt": "Encriptación",
+    "end": "Fin",
     "end-date": "Data de finalización",
     "end-month": "Mes de fin",
     "end-time": "Hora de remate",
