--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -531,6 +531,7 @@
     "enabled": "Ativado",
     "enabled-plugins": "Plugins ativados",
     "encrypt": "Criptografia",
+    "end": "Fim",
     "end-date": "Data Final",
     "end-month": "Mês de fim",
     "end-time": "hora-final",
