--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -531,6 +531,7 @@
     "enabled": "Ativado",
     "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
+    "end": "Fim",
     "end-date": "Data final",
     "end-month": "Fim de mês",
     "end-time": "Hora de finalização",
