--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -531,6 +531,7 @@
     "enabled": "aktiviert",
     "enabled-plugins": "Aktivierte Plugins",
     "encrypt": "Verschlüsseln",
+    "end": "Ende",
     "end-date": "Endtermin",
     "end-month": "Endmonat",
     "end-time": "Endzeit",
