--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -531,6 +531,7 @@
     "enabled": "Activée",
     "enabled-plugins": "Plugins activés",
     "encrypt": "Chiffrement",
+    "end": "Fin",
     "end-date": "Date de fin",
     "end-month": "Mois de fin",
     "end-time": "Heure de fin",
