--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -531,6 +531,7 @@
     "enabled": "Abilitato",
     "enabled-plugins": "Plugin attivi",
     "encrypt": "Crittazione",
+    "end": "Fine",
     "end-date": "Data di fine",
     "end-month": "Mese di fine",
     "end-time": "tempo finale",
