--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -531,6 +531,7 @@
     "enabled": "Aktywny",
     "enabled-plugins": "Aktywne wtyczki",
     "encrypt": "Szyfrowanie",
+    "end": "Koniec",
     "end-date": "Data zakończenia",
     "end-month": "Miesiąc zakończenia",
     "end-time": "Czas zakończenia",
