--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -531,6 +531,7 @@
     "enabled": "Activat",
     "enabled-plugins": "Connectors actius",
     "encrypt": "Sifrar",
+    "end": "Fin",
     "end-date": "Data de fi",
     "end-month": "Mes de finalització",
     "end-time": "Hora de finalització",
